@@ -7,6 +7,8 @@ version 1.3:
 	of Natanael Arndt <arndtn@gmx.de>.
 	- pommed: rewrote CD ejection routine; no longer depends on eject,
 	sends the dbus notification before ejecting the CD.
+	- pommed: add DBus methods to control pommed over DBus. Original
+	patch by Alexis ROBERT <alexis@fnux.org>.
 
 version 1.2:
 	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.
